fixed little triangle in access-layer that was centered instead of align to the left

--- a/components/media-cta.scss
+++ b/components/media-cta.scss
@@ -72,6 +72,7 @@ $iconWidth: 300px;
    .MediaCTA__card--title {
       &:after {
         margin-left: 10px;
+        left: 0%;
       }
     }
 
